--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
    <!-- リセットCSS -->
    <link rel="stylesheet" href="css/reset.css"> 
    
+   <!-- slick（slick.css）読み込み -->
+   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
    <!-- スタイルシート　-->
    <link rel="stylesheet" href="css/style.css">
     <!-- google fonts読み込み -->
@@ -94,8 +97,106 @@
           <span class="p-top-concept-diagram-row__cir"></span>
           <p class="p-top-concept-diagram-row__sec">輝く存在へ</p>
         </div>
+      </div>   
+    </div>
+  </section>
+  <section class="p-top__message p-top-message u-bg-red">
+    <div class="l-inner">
+      <h2 class="c-head c-head--wh">音楽業界初！<br>収益化までサポートする<br class="sp">ミュージックスクール</h2>
+      <p class="p-top-message__text">楽器や作詞作曲などの<br class="sp">技術・知識はもちろんのこと<br>
+         自分で稼ぎつづけるための<br class="sp">ビジネス面もサポートします！</p>
+     </div>
+  </section>
+
+  <section class="p-top__reason p-top-reason">
+    <div class="l-inner">
+      <h2 class="c-head">きたむらミュージック<br class="sp">スクールが選ばれる理由</h2>
+      <div class="p-top-reason__block-wrap">
+        <div class="p-top-reason__block p-top-reason-block">
+          <div class="p-top-reason-block__img">
+            <picture>
+              <source media="(max-width: 767px)" srcset="./images/reason01-sp.jpg">
+              <img src="./images/reason01.jpg" alt="">
+            </picture>
+          </div>
+          <div class="p-top-reason-block__right p-top-reason-block-right">
+            <p class="p-top-reason-block-right__head">技術面はプロによるマンツーマン授業！</p>
+            <p class="p-top-reason-block-right__text">第一線で活躍するプロによるマンツーマン授業で、きめ細かな技術指導が受けられます。</p>
+          </div>
+        </div>
+        <div class="p-top-reason__block p-top-reason-block">
+          <div class="p-top-reason-block__img">
+            <picture>
+              <source media="(max-width: 767px)" srcset="./images/reason01-sp.jpg">
+              <img src="./images/reason01.jpg" alt="">
+            </picture>
+          </div>
+          <div class="p-top-reason-block__right p-top-reason-block-right">
+            <p class="p-top-reason-block-right__head">収益化するためのビジネスサポート！</p>
+            <p class="p-top-reason-block-right__text">コンセプト設計や集客方法、マーケティングリサーチなど、音楽で稼ぎつづけるための方法やマインドセットをサポートするクラスをご用意。</p>
+          </div>
+        </div>
+        <div class="p-top-reason__block p-top-reason-block">
+          <div class="p-top-reason-block__img">
+            <picture>
+              <source media="(max-width: 767px)" srcset="./images/reason01-sp.jpg">
+              <img src="./images/reason01.jpg" alt="">
+            </picture>
+          </div>
+          <div class="p-top-reason-block__right p-top-reason-block-right">
+            <p class="p-top-reason-block-right__head">24時間365日使える練習ROOMを完備！</p>
+            <p class="p-top-reason-block-right__text">一年中使える個室の練習ROOMを完備しているため、お仕事帰りや合間の時間も自由に練習が可能です。（アプリで予約が必要です）</p>
+          </div>
+        </div>        
       </div>
-   
+    </div>
+  </section>
+
+  <section class="p-top__voice p-top-voice u-bg-red">
+    <div class="p-top-voice__inner">
+      <h2 class="c-head c-head--wh ">生徒さんたちの声</h2>
+       <div class="p-top-voice__lists js-slider">
+         <div class="p-top-voice__list">
+           <div class="p-top-voice__img">
+             <picture>
+               <source media="(max-width: 767px)" srcset="./images/voice01-sp.jpg">
+               <img src="./images/voice01.jpg" alt="">
+             </picture>
+           </div>
+           <p class="p-top-voice__head">証券会社勤務　丸山さん</p>
+           <p class="p-top-voice__text">昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p>
+         </div>
+         <div class="p-top-voice__list">
+           <div class="p-top-voice__img">
+             <picture>
+               <source media="(max-width: 767px)" srcset="./images/voice02-sp.jpg">
+               <img src="./images/voice02.jpg" alt="">
+             </picture>
+           </div>
+           <p class="p-top-voice__head">IT会社勤務　S.Eさん</p>
+           <p class="p-top-voice__text">プロの指導が受けられるので、技術が確実に上がるし、音楽への考え方とかも勉強できて最高です。</p>
+         </div>
+         <div class="p-top-voice__list">
+           <div class="p-top-voice__img">
+             <picture>
+               <source media="(max-width: 767px)" srcset="./images/voice03-sp.jpg">
+               <img src="./images/voice03.jpg" alt="">
+             </picture>
+           </div>
+           <p class="p-top-voice__head">都内大学生　田森さん</p>
+           <p class="p-top-voice__text">就職する前にビジネスの事が学べるし、好きな音楽で稼げるようになったので選択肢が増えました。</p>
+         </div>
+         <div class="p-top-voice__list">
+           <div class="p-top-voice__img">
+             <picture>
+               <source media="(max-width: 767px)" srcset="./images/voice01-sp.jpg">
+               <img src="./images/voice01.jpg" alt="">
+             </picture>
+           </div>
+           <p class="p-top-voice__head">証券会社勤務　丸山さん</p>
+           <p class="p-top-voice__text">昔やっていた音楽活動で、副収入が得られるようになったので、毎日充実するようになりました。</p>
+         </div>
+       </div>
     </div>
   </section>
 
@@ -104,6 +205,9 @@
 
   <!--jQueryの読み込み --> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+  <!-- slick読み込み -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
   <!-- javascriptの読み込み -->
   <script src="./js/main.js"> </script>
