--- a/index.html
+++ b/index.html
@@ -199,7 +199,98 @@
        </div>
     </div>
   </section>
+  
+  <section class="p-top__flow p-top-flow">
+    <div class="l-inner">
+      <h2 class="c-head">ご利用の流れ</h2>
+      <div class="p-top-flow__diagram p-top-flow-diagram">
+        <div class="p-top-flow-diagram__row">
+          <span class="p-top-flow-diagram-row__marker"></span>   
+          <p class="p-top-flow-diagram-row__head">お問い合わせ</p>   
+          <p class="p-top-flow-diagram-row__text">まずはフォームまたはメールにてお問い合わせください。<br>
+            ヒアリングの日程を調整します。</p>          
+        </div>
+        <div class="p-top-flow-diagram__row">
+          <span class="p-top-flow-diagram-row__marker"></span>   
+          <p class="p-top-flow-diagram-row__head">ヒアリング</p>   
+          <p class="p-top-flow-diagram-row__text">現在の技術面や将来の目標などをお伺いします。<br>
+           悩みや不安な事もお気軽にご相談ください。</p>          
+        </div>
+        <div class="p-top-flow-diagram__row">
+          <span class="p-top-flow-diagram-row__marker"></span>   
+          <p class="p-top-flow-diagram-row__head">プランのご提案</p>   
+          <p class="p-top-flow-diagram-row__text">ライフスタイルや目標によって最適なプランをご提案します。<br>
+           継続できるようサポートいたします。</p>          
+        </div>
+        <div class="p-top-flow-diagram__row">
+          <span class="p-top-flow-diagram-row__marker p-top-flow-diagram-row__marker--bottom"></span>   
+          <p class="p-top-flow-diagram-row__head">ご入学</p>   
+          <p class="p-top-flow-diagram-row__text">お申し込み完了後、レッスンがスタートします。<br>
+           マンツーマン指導なので、いつからでもスタートが可能です。</p>          
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="p-top__faq p-top-faq">
+    <div class="l-inner">
+      <h2 class="c-head">よくあるご質問</h2>
+      <ul class="p-top-faq__lists">
+        <li class="p-top-faq__item p-top-faq__item--top">
+          <div class="p-top-faq__question p-top-faq-question">            
+            <span class="p-top-faq-question__cir">Q</span>
+            <p class="p-top-faq-question__te">どのような生徒さんがどれぐらいの期間で稼いでいますか？</p>
+            <p class="p-top-faq-question__img">
+              <img src="images/faq-arrow-down.svg" alt="">
+            </p>
+          </div>
+          <div class="p-top-faq__answer p-top-faq-answer">
+            <span class="p-top-faq-answer__cir">A</span>
+            <p class="p-top-faq-answer__te">それはどうかな</p>
+          </div>
+        </li> 
+        <li class="p-top-faq__item">
+          <div class="p-top-faq__question p-top-faq-question">            
+            <span class="p-top-faq-question__cir">Q</span>
+            <p class="p-top-faq-question__te">途中でプランを変更することは可能ですか？</p>
+            <p class="p-top-faq-question__img">
+              <img src="images/faq-arrow-down.svg" alt="">
+            </p>
+          </div>
+          <div class="p-top-faq__answer p-top-faq-answer">
+            <span class="p-top-faq-answer__cir">A</span>
+            <p class="p-top-faq-answer__te">途中でプラン変更も可能です。毎月15日までに申請すれば翌月からプランが変更となります。</p>
+          </div>
+        </li>   
+        <li class="p-top-faq__item">
+          <div class="p-top-faq__question p-top-faq-question">            
+            <span class="p-top-faq-question__cir">Q</span>
+            <p class="p-top-faq-question__te">入学金などの分割払いはできますか？</p>
+            <p class="p-top-faq-question__img">
+              <img src="images/faq-arrow-down.svg" alt="">
+            </p>
+          </div>
+          <div class="p-top-faq__answer p-top-faq-answer">
+            <span class="p-top-faq-answer__cir">A</span>
+            <p class="p-top-faq-answer__te">知るか！</p>
+          </div>
+        </li>      
+        <li class="p-top-faq__item">
+          <div class="p-top-faq__question p-top-faq-question">            
+            <span class="p-top-faq-question__cir">Q</span>
+            <p class="p-top-faq-question__te">休学することも可能ですか？</p>
+            <p class="p-top-faq-question__img">
+              <img src="images/faq-arrow-down.svg" alt="">
+            </p>
+          </div>
+          <div class="p-top-faq__answer p-top-faq-answer">
+            <span class="p-top-faq-answer__cir">A</span>
+            <p class="p-top-faq-answer__te">それはどうかな</p>
+          </div>
+        </li>      
+      </ul>
+    </div>
+  </section>
 
  
 
